Add a few references

--- a/biblio.bib
+++ b/biblio.bib
@@ -665,3 +665,62 @@ pages = {633-644},
 year = {1996},
 doi = {10.1119/1.18168},
 }
+
+@article{laurie2015computation,
+  title={Computation of rare transitions in the barotropic quasi-geostrophic equations},
+  author={Laurie, Jason and Bouchet, Freddy},
+  journal={New Journal of Physics},
+  volume={17},
+  number={1},
+  pages={015009},
+  year={2015},
+  publisher={IOP Publishing}
+}
+
+@article{bouchet2014langevin,
+  title={Langevin dynamics, large deviations and instantons for the quasi-geostrophic model and two-dimensional Euler equations},
+  author={Bouchet, Freddy and Laurie, Jason and Zaboronski, Oleg},
+  journal={Journal of Statistical Physics},
+  volume={156},
+  number={6},
+  pages={1066--1092},
+  year={2014},
+  publisher={Springer}
+}
+@article{bouchet2019rare,
+  title={Rare event algorithm links transitions in turbulent flows with activated nucleations},
+  author={Bouchet, Freddy and Rolland, Joran and Simonnet, Eric},
+  journal={Physical review letters},
+  volume={122},
+  number={7},
+  pages={074502},
+  year={2019},
+  publisher={APS}
+}
+@article{dematteis2018rogue,
+  title={Rogue waves and large deviations in deep sea},
+  author={Dematteis, Giovanni and Grafke, Tobias and Vanden-Eijnden, Eric},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={5},
+  pages={855--860},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
+@article{dematteis2019experimental,
+  title={Experimental Evidence of Hydrodynamic Instantons: The Universal Route to Rogue Waves},
+  author={Dematteis, Giovanni and Grafke, Tobias and Onorato, Miguel and Vanden-Eijnden, Eric},
+  journal={arXiv preprint arXiv:1907.01320},
+  year={2019}
+}
+@article{wouters2016rare,
+  title={Rare event computation in deterministic chaotic systems using genealogical particle analysis},
+  author={Wouters, Jeroen and Bouchet, Freddy},
+  journal={Journal of Physics A: Mathematical and Theoretical},
+  volume={49},
+  number={37},
+  pages={374002},
+  year={2016},
+  publisher={IOP Publishing}
+}
