Modifies legend caption for figure 6

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -367,7 +367,7 @@ In the following, $\tau_c$ will be referred to as the \textit{correlation time} 
 \begin{figure}
 	\centering
 	\includegraphics[width=.6\linewidth]{return_time/return_time.png}
-	\caption{Amplitude of drag fluctuation (in standard-deviation unit) as a function the corresponding return time.
+	\caption{Amplitude of drag fluctuations as a function the corresponding return time. $\tilde{f}_d$ denotes the drag with zero mean, \textit{i.e.} $\tilde{f}_d = f_d - \overline{f_d}$.
 	}
 	\label{fig:return_time_instant}
 \end{figure}
