Modifies comment and figure AMS_drag_resampling

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -743,8 +743,9 @@ Fig.~\ref{fig:AMS_drag_resampling} displays the maximum drag achieved by the re-
 %
 The distribution of the maximal drag for the \textit{initial} trajectories is also shown.
 After a few iterations, the trajectories with the lowest maxima of the score function are discarded and new trajectories with higher maxima are re-sampled.
-These maxima are depicted by the stars in Fig~\ref{fig:AMS_drag_resampling}.
-Importantly, one can observe that the re-sampled trajectories never exceed the amplitude of the highest maximum already attained in the initial set of trajectories. This obviously contrasts with the case of the \acl{ou} process.
+Figure~\ref{fig:AMS_drag_resampling} shows the evolution of the maxima of the re-sampled trajectories as the \ac{ams} is iterated, \textit{i.e.} as a function of the computational cost.
+The re-sampled trajectories never exceed the amplitude of the highest maximum already attained in the initial set of trajectories.
+Note that the red points in figure~\ref{fig:AMS_drag_resampling} are analogous to the red line in  figure~\ref{fig:comparaison_temps_de_retour} for the \ac{ou} process.
 %(see Fig.~\ref{fig:comparaison_temps_de_retour}). 
 
 
